# logseq-sync

./: .gitignore  Makefile  README.md  api.md  pyproject.toml  readme.md
src/logseq_sync/: main.py  types.py
src/logseq_sync_backend/: db.py  main.py  types.py
tests/: test_main.py
