[tool.poetry]
name = "logseq-sync-backend"
version = "0.1.0"
description = ""
authors = ["Ivan Gonzalez <scratchmex@gmail.com>"]
readme = "README.md"
packages = [{include = "logseq_sync_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
