[tool.poetry]
name = "logseq-sync-backend"
version = "0.1.0"
description = ""
authors = ["Ivan Gonzalez <scratchmex@gmail.com>"]
readme = "README.md"
packages = [{include = "logseq_sync_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = true
